package de.hhu.chicken.domain.klausur;

record VeranstaltungsId(Long veranstaltungsId) {

}
