package de.hhu.chicken.infrastructure.persistence;

public class StudentRepositoryImpl {

}
